# pdfanalysis

./: .readthedocs.yaml  INSTALL.md  LICENSE  MANIFEST.in  README.md  WINDOWS_INSTALL.md  app_pdf_analysis.py  environment.yml  pdf_app.sh  pdfanalysis-app.bat  pyproject.toml  setup.py
.github/workflows/: py-publish.yml
docs/: changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst  streamlit_app.rst  workflow.rst
docs/api/: index.rst  pdf_extractor.rst  pdf_refinement.rst  pdf_refinement_fast.rst  pdfanalysis_func.rst  structure_custom.rst  structure_generator.rst  structure_report_generator.rst  structure_screener.rst
pdfanalysis/: __init__.py  app_pdf_analysis.py  cli.py  pdf_extractor.py  pdf_refinement.py  pdf_refinement_fast.py  pdfanalysis.py  structure_custom.py  structure_generator.py  structure_report_generator.py  structure_screener.py
